--- a/quizzy-quest/package.json
+++ b/quizzy-quest/package.json
@@ -8,11 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "crypto-js": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-jwt": "^1.2.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "secure-web-storage": "^1.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
